--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Innovate 360</title>
   <meta name="description"
-    content="Innovate 360 - A leading digital agency specializing in web design, development, branding, and marketing solutions to help your business grow." />
+    content="Innovate 360 - A leading digital company specializing in web design, development, branding, and marketing solutions to help your business grow." />
   <!-- Preconnect to external domains for faster resource loading -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
